-fix z-index

--- a/resources/js/pages/common-styles.scss
+++ b/resources/js/pages/common-styles.scss
@@ -21,7 +21,7 @@
         box-shadow:      0 3px 12px rgba(0, 33, 95, 0.12);
         padding:         32px 0 22px;
         text-align:      center;
-        z-index:         15;
+        z-index:         2147483647;
 
         border-radius:   12px;
 
